appId: com.cakale.edu.app
---
- runFlow:
    file: ../shared/login.yaml
    env:
      EMAIL: "ifeoma.chukwu@mail.cakale.com"
      PASSWORD: "Demo@2026!"
- tapOn: "Features"
- tapOn: "Results"
- extendedWaitUntil:
    visible: "Class Results"
    timeout: 15000
- back
- runFlow: ../shared/logout.yaml
